# Debate-Council

./: .gitignore  ARCHITECTURE_FLOW.md  README.md  persona_dynamics_engine_methadology.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/jobs/: store.py
backend/app/llm/: client.py
backend/app/models/: report.py  stage1.py  stage2.py  stage3.py
backend/app/pipeline/: behavioral_taxonomy.py  belief_strain_engine.py  confidence_calibration.py  defense_engine.py  instagram_client.py  llm_parsing.py  orchestrator.py  profile_enrichment.py  stage1_extract.py  stage2_debate.py  stage3_monte.py  stage3_ou.py  stage3_project.py  stage3_state.py
backend/app/streaming/: events.py
backend/scripts/: import_instagram_session.py
backend/tests/: test_defense_engine.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AnalysisShell.tsx
frontend/src/demo/: DebateCouncilRail.tsx  DemoCalloutOverlay.tsx  DemoCinemaHud.tsx  DemoFinale.tsx  DemoNarrationBar.tsx  DemoStageCurtain.tsx  DemoTopChrome.tsx  DemoWalkthroughPanel.tsx  NorthStarDemo.tsx  buildDemoEvents.ts  buildDemoFixture.ts  demoCallouts.ts  demoExperience.ts  demoNarration.ts  demoRunner.ts  demoWalkthrough.ts
frontend/src/hooks/: useAnalysisStream.ts
frontend/src/lib/: analysisStreamManager.ts  chartTheme.ts  debateUtils.ts  exportInteractiveReport.ts  signalInterpretation.ts  substepExplain.ts  utils.ts
frontend/src/store/: analysisStore.ts
(+52 files in other folders)
